ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Countries__c/CnP_PaaS__CnP_Countries__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Countries</label>
    <nameField>
        <displayFormat>CountryID-{0000}</displayFormat>
        <label>C&amp;P Countries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>