ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Countries__c/fields/CnP_PaaS__CnP_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Country_Name__c</fullName>
    <label>C&amp;P Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>