ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Countries__c/fields/CnP_PaaS__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>